--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-      "ext-curl": "*"
+        "php-ai/php-ml": "^0.10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
